# pickett-plot-for-formation-evaluation-in-python

./: README.md  article.md  config.yaml  generate_plot.py  pyproject.toml
